feat: save character portraits and ability icons in private storage
